# iot-anomaly-detection

./: .env  README.md  edge_data.duckdb  pyproject.toml
cloud/: cloud_anomaly_detector.py  pyproject.toml
edge/: edge_anomaly_detector.py  edge_data.duckdb
iot_connection/: README.md  esp8266_bedroom.ino  esp8266_office.ino  esp8266_outdoor.ino  telegraf.conf
